--- a/README.org
+++ b/README.org
@@ -1077,13 +1077,13 @@ that it is coming from something I have installed and cannot be relied upon.
 Quirks are required for zsh due to the fact that it will set =$0= to the name
 of the function which breaks grepping =$0= since we encounter the name of the
 function not the name of the source file.
-*** Tests
-Some test blocks to ensure shell portability.
-#+begin_src powershell :noweb yes :results output
+*** Tests                                                          :noexport:
+Test blocks to ensure shell portability.
+#+begin_src powershell :noweb yes :results output :exports none
 <<posix-powershell-switch>>
 #+end_src
 
-#+begin_src zsh :noweb yes :results output
+#+begin_src zsh :noweb yes :results output :exports none
 <<posix-powershell-switch>>
 #+end_src
 ** Emacs lisp
@@ -1103,10 +1103,17 @@ needed safely hidden away from elisp behind the comments.
 (message "We have Emacs.")
 #+end_src
 
-*** Tests
+At this point the basics of the script should be working on
+darwin, various linux distros, various bsds, and windows. At the moment
+only windows and a subset of linux distros can bootstrap from scratch.
+There is also a question of whether forcing a package manager on an
+unsuspecting user is a good idea. I tend to say yes, but maybe we need
+to make sure that they are a little less unsuspecting? Though there is
+nothing like a cold baptism into the world of proper systems administration.
+*** Tests                                                          :noexport:
 Bash
 #+name: bootstrap-from-shell-bash
-#+begin_src bash :noweb no-export :results output
+#+begin_src bash :noweb no-export :results output :exports none
 <<bootstrap-from-shell>>
 #+end_src
 
@@ -1115,29 +1122,21 @@ If you try to run this block via org-babel on a Debian derived
 distro this will fail, see the =:shebang= header for details.
 #+name: bootstrap-from-shell-sh
 #+header: :shebang "#!/usr/bin/env -S bash --norc --posix"
-#+begin_src sh :noweb no-export :results output
+#+begin_src sh :noweb no-export :results output :exports none
 <<bootstrap-from-shell>>
 #+end_src
 
 Zsh
 #+name: bootstrap-from-shell-zsh
-#+begin_src zsh :noweb no-export :results output
+#+begin_src zsh :noweb no-export :results output :exports none
 <<bootstrap-from-shell>>
 #+end_src
 
+Powershell
 #+name: bootstrap-from-shell-powershell
-#+begin_src powershell :noweb no-export :results output
+#+begin_src powershell :noweb no-export :results output :exports none
 <<bootstrap-from-shell>>
 #+end_src
-
-At this point the basics of the script below should be working on
-darwin, various linux distros, various bsds, and windows. At the moment
-only windows and a subset of linux distros can bootstrap from scratch.
-There is also a question of whether forcing a package manager on an
-unsuspecting user is a good idea. I tend to say yes, but maybe we need
-to make sure that they are a little less unsuspecting? Though there is
-nothing like a cold baptism into the world of proper systems administration.
-
 * Future work
 :PROPERTIES:
 :CUSTOM_ID: future-work
