--- a/README.org
+++ b/README.org
@@ -14,7 +14,7 @@
 # If you wan't to grow up to be a unicorn you're going to have to
 # pull yourself up by your own bootstraps!
 
-=orgstrap= is a specification and tools for bootstrapping Org files.
+=orgstrap= is a specification and tooling for bootstrapping Org files.
 
 It allows Org files to describe their own requirements, and
 define their own functionality, making them self-contained, standalone
